--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,3 +1,3 @@
-db.url=test@127.0.0.1:3306/ims
-db.user=test
-db.password=test
+db.url=jdbc:mysql://localhost:3306/ims
+db.user=root
+db.password=root
